# rotatum

./: .gitattributes  .gitmodules  CMakeLists.txt
.reuse/: dep5
Engine/: CMakeLists.txt
Engine/cmake/Scripts/: setup_game.cmake  setup_nasm.cmake
Engine/lib/: CMakeLists.txt
Engine/lib/cmake/collada/: CMakeLists.txt
Engine/lib/cmake/convexDecomp/: CMakeLists.txt
Engine/lib/cmake/libjpeg/: CMakeLists.txt
Engine/lib/cmake/libmng/: CMakeLists.txt
Engine/lib/cmake/libogg/: CMakeLists.txt
Engine/lib/cmake/libpng/: CMakeLists.txt
Engine/lib/cmake/libtheora/: CMakeLists.txt
Engine/lib/cmake/libungif/: CMakeLists.txt
Engine/lib/cmake/libvorbis/: CMakeLists.txt
Engine/lib/cmake/opcode/: CMakeLists.txt
Engine/lib/cmake/pcre/: CMakeLists.txt
Engine/lib/cmake/squish/: CMakeLists.txt
Engine/lib/cmake/tinyxml/: CMakeLists.txt
Engine/lib/cmake/zlib/: CMakeLists.txt
Engine/source/: CMakeLists.txt  advancedLighting.cmake  basicLighting.cmake  collada.cmake  core.cmake  dsound.cmake  openal.cmake  t3d.cmake  theora.cmake
Engine/source/T3D/: shapeImage.cpp
Engine/source/app/: mainLoop.cpp
Engine/source/console/: consoleFunctions.cpp
Engine/source/environment/: waterObject.cpp  waterObject.h
Engine/source/gfx/: gfxAPI.cpp  gfxEnums.h  gfxInit.cpp  gfxShader.h  gfxStructs.cpp  gfxStructs.h
Engine/source/lighting/: lightManager.h
Engine/source/main/: main.cpp
Engine/source/materials/: processedCustomMaterial.cpp  processedFFMaterial.cpp  processedMaterial.cpp  (+3 more)
Templates/: CMakeLists.txt
Templates/Empty/: CMakeLists.txt
Templates/Full/: CMakeLists.txt
Tools/: CMakeLists.txt
Tools/dae2dts/: CMakeLists.txt
(+170 files in other folders)
